# AI-News-summarizer

./: .gitignore  IMPLEMENTATION.md  digest_4.eml  digest_7.eml  pyproject.toml  readme.md  scraping_results_20260103_185649.json
app/db/: models.py
app/graph/: build_graph.py  state.py
app/scrapers/: googlenews.py  run_scrapers.py  techblogs.py  test_scrapers.py  timesofindia.py
app/services/: articles_repo.py  cleanup_repo.py  database.py  digest_repo.py  email_message_builder.py  email_renderer.py  email_sender.py  extract_repo.py  extractor.py  ranker.py  select_repo.py  summarizer.py
docker/: docker-compose.yml
scripts/: analyze_extractions.py  check_article_sources.py  check_db_content.py  check_extraction_status.py  cleanup_and_migrate.py  cleanup_once.py  debug_email_send.py  extract_once.py  ingest_once.py  init_db.py  migrate_add_retry_columns.py  preview_email.py  reset_failed_extractions.py  run_graph.py  select_top.py  send_digest_email.py  send_test_email.py
